Complete, minor horizontal scrolling/width issue on resize outstanding

--- a/src/index.css
+++ b/src/index.css
@@ -30,43 +30,97 @@ body {
   background: var(--clr-dark);
 }
 
-/* Typography */
-
+/* Preview markup styles */
 h1 {
-  font-family: var(--ff-primary);
-  font-size: var(--fs-h1);
-  font-weight: var(--fw-bold);
-  padding: 0;
-  margin: 0;
+  border-bottom: 0.1em solid #000;
+}
+h2 {
+  border-bottom: 0.05em solid #000;
+}
+table,
+tr,
+th,
+td {
+  border: 0.1em solid #000;
+  border-collapse: collapse;
+}
+blockquote {
+  border-left: 0.25em solid #000;
+  padding-left: 0.5em
+}
+code {
+  background-color: var(--clr-dark);
+  color: var(--clr-light);
 }
 
 /* Sections */
 
-section {
+.editor {
   margin: 0 auto;
   margin-bottom: 1.5em;
   display: grid;
   box-shadow: var(--bs-default);
-}
-
-.section--editor {
   width: 90vw;
-  grid-template-rows: 2em 15em;
+  grid-template-rows: 2em minmax(min-content, 15em);
 }
 
-.section--preview {
+.previewer {
+  margin: 0 auto;
+  margin-bottom: 1.5em;
+  display: grid;
+  box-shadow: var(--bs-default);
   width: 95vw;
-  grid-template-rows: 2em auto;
+  grid-template-rows: 2em minmax(min-content, 15em);
 }
 
-@media (min-width: 65em) {
-  .section--editor {
-    width: 50vw;
+.editor--fullscreen {
+  width: 96vw;
+  grid-template-rows: 2em 95vh;
+  top: 0;
+  z-index: 1000;
+  margin-top: 0.5em;
+}
+
+.previewer--fullscreen {
+  width: 96vw;
+	grid-template-rows: 2em 95vh;
+	position: absolute;
+	top: 0;
+  z-index: 1000;
+  margin-top: 0.5em;
+}
+
+@media (min-width: 40em) {
+  .editor {
+    width: 80vw;
   }
   
-  .section--preview {
-    width: 60vw;
+  .previewer {
+    width: 90vw;
   }
+}
+
+@media (min-width: 60em) {  
+  .editor {
+    width: 45em;
+  }
+
+  .previewer {
+    width: 50em;
+  }
+}
+
+.editor--fullscreen {
+  width: 96vw;
+	grid-template-rows: 2em 95vh;
+}
+
+.previewer--fullscreen {
+  width: 96vw;
+	grid-template-rows: 2em 95vh;
+	position: absolute;
+	top: 0;
+	z-index: 1000
 }
 
 /* Section header */
@@ -80,8 +134,7 @@ header {
   margin: 0;
   color: #fff;
   border: 0.05em solid #000;
-  box-shadow: var(--bs-default);
-              
+  box-shadow: var(--bs-default);           
   z-index: 2;
 }
 
@@ -94,32 +147,23 @@ header {
   cursor: pointer;
 }
 
+.section-title {
+  font-family: var(--ff-primary);
+  font-size: var(--fs-h1);
+  font-weight: var(--fw-bold);
+  padding: 0;
+  margin: 0;
+  border: 0;
+}
+
 /* Editor / Preview */
 
 #editor,
 #preview {
   background-color: var(--clr-light);
   margin: 0;
-  resize: none;
+ /** resize: none;*/
   padding: 0.5em;
   border: 0.05em solid #000;
   border-top: 0;
 }
-
-
-
-/**
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-*/
